tests/cases/structs/ok/struct-surface.ari
struct Point {
  x: i64,
  y: i64,
}

struct Meter {
  mut value: i64,
}

struct Pair[T] {
  left: T,
  right: T,
}

struct UsesPair {
  pair: Pair[i64],
}

struct TuplePoint(i64, bool)

fn main() -> i64 {
  return 0;
}
