tests/cases/structs/errors/struct-literal-missing-field.ari
struct Point {
  x: i64,
  y: i64,
}

fn main() -> i64 {
  let point = Point { x: 1 };
  return point.x;
}
